--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "homepage": "https://bc-dev-gh.github.io/loldb",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,7 +16,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,6 +39,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@vitest/ui": "^2.1.8",
+    "gh-pages": "^6.2.0",
+    "jsdom": "^26.0.0",
+    "vitest": "^2.1.8"
   }
 }
